On mobile horizontal scrollbar is fixed but vertical scrollbar still works when menu is up

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,7 @@
 
 html,
 body {
-  overflow-x: hidden !important;
+  overflow-x: hidden;
 }
 
 body {
